<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView 
	    android:id="@string/s_image"
	    android:layout_width="300dp"
	    android:layout_height="300dp"
	    android:visibility="gone"/>
	
	<VideoView 
	    android:id="@string/s_video"
	    android:layout_width="300dp"
	    android:layout_height="300dp"
	    android:visibility="gone"/>
	<TextView
	    android:id="@string/s_time"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView
	    android:id="@string/s_Text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:gravity="top"
	    />
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	        android:id="@string/s_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="返回"
	        android:layout_weight="1" />
	    
	    <Button
	        android:id="@string/s_delete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="删除"
	        android:layout_weight="1" />
	</LinearLayout>"
</LinearLayout>
