<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ImageView 
	    android:id="@string/e_img"
	    android:layout_width="300dp"
	    android:layout_height="300dp"
	    android:visibility="gone"/>
	
	<VideoView 
	    android:id="@string/e_video"
	    android:layout_width="300dp"
	    android:layout_height="300dp"
	    android:visibility="gone"/>
	
	<EditText
	    android:id="@string/e_Text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="有了记事本，我再也不怕丢东西了"
	    android:layout_weight="1"
	    android:gravity="top"
	    />
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	        android:id="@string/e_save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="保存"
	        android:layout_weight="1" />
	    
	    <Button
	        android:id="@string/e_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="删除"
	        android:layout_weight="1" />
	</LinearLayout>"
</LinearLayout>
