<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mynotes.MainActivity" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal">
	    
	    <Button 
	        android:id="@string/text"
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="文字"/>
	    
	    <Button 
	        android:id="@string/img"
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="图片"/>
	    
	    <Button 
	        android:id="@string/video"
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="视频"/>
	</LinearLayout>

	<ListView
	    android:id="@string/list"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	</ListView>
</LinearLayout>
